Deleting some lines and change p5.js source to cdn

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Self-organized flocking of robotic swarm</title>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="../p5.js"></script>
-    <script src="../addons/p5.dom.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
     <script src="boid.js"></script>
     <script src="obstacle.js"></script>
     <script src="sketch.js"></script>
